<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="Home"
        />
    <item
        android:id="@+id/nav_cart"
        android:title="Cart"
        />

    <item
        android:id="@+id/nav_my_products"
        android:title="My Products"
        />
    <item
        android:id="@+id/nav_create_product"
        android:title="Create Product"
        />
    <item
        android:id="@+id/nav_profile"
        android:title="Profile"
        />
    <item
        android:id="@+id/nav_exchange_request_buyer"
        android:title="Exchange Requests (Buyer)"
        />
    <item
        android:id="@+id/nav_exchange_request_seller"
        android:title="Exchange Requests (Seller)"
        />

    <item
        android:id="@+id/nav_login"
        android:title="Login"
        />
    <item
        android:id="@+id/nav_logout"
        android:title="Logout"
        />
</menu>